# sphinxcontrib-jsonglobaltoc

./: .bumpversion.cfg  README.md  requirements.txt  setup.cfg  setup.py
sphinx_json_globaltoc/: __init__.py
