[metadata]
name = sphinxcontrib-jsonglobaltoc
version = 0.1.4
author = Caltech IMSS ADS
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/sphinxcontrib-jsonglobaltoc
description = Sphinx extension to add a global table of contents to JSON output files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
  documentation
  sphinx
  json
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Software Development :: Documentation
project_urls =
    Source = https://github.com/caltechads/sphinxcontrib-jsonglobaltoc
    Issues = https://github.com/caltechads/sphinxcontrib-jsonglobaltoc/issues

[options]
zip_safe = False
platforms = any
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
  sphinx
  sphinxcontrib-serializinghtml

[bdist_wheel]
universal = 1


# -------
# Linters
# -------

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with '# '
# E266:  too many leading '#' for block comment
# E401:  multiple imports on one line
ignore = E221,E241,E265,E266,E401,W504

[pylint.FORMAT]
max-line-length=120

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    too-many-lines,
    no-member

[mypy]
python_executable: ~/.pyenv/shims/python
exclude = (?x)(
    ^build$
  )

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sphinxcontrib.serializinghtml.*]
ignore_missing_imports = True